--- a/index.html
+++ b/index.html
@@ -109,16 +109,10 @@
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>Arrivée des invités et Installation</h4>
-              </div>
-              <div class="timeline-body">
-                <!-- <p>
-                  Un vol Royal Air Maroc : Un gars, Une fille…Là où tout a
-                  commencé
-                </p> -->
+                <h4>Arrivée des invités</h4>
               </div>
               <div class="timeline-footer">
-                <p class="text-right">10h 00</p>
+                <p class="text-right">10h00</p>
               </div>
             </div>
           </li>
@@ -129,21 +123,10 @@
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>Entrée des Demoiselles et Garçons d’honneur</h4>
-              </div>
-              <div class="timeline-body">
-                <!-- <p>
-                  Officialisation de la team « Ekambi’S »
-                   PROGRAMME DE LA JOURNEE 10h : Arrivée des invités et Installation 10h
-          30 : Entrée des Demoiselles et Garçons d’honneur 10h 45 : Entrée des
-          pasteurs 10h 50 : Entrée du Marié et sa Maman 10h 55 : Entrée de la
-          mariée et son papa 11h 00 : Début de la cérémonie 12h 45 : Fin de la
-          cérémonie 13h 00 : Séance Photos et Apéritif Musical 14h 30 : Début du
-          Cocktail
-                </p> -->
+                <h4>Entrée des Demoiselles et Garçons d’honneur + Installation</h4>
               </div>
               <div class="timeline-footer">
-                <p class="text-right">10h 30</p>
+                <p class="text-right">10h30</p>
               </div>
             </div>
           </li>
@@ -154,15 +137,10 @@
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>Entrée des pasteurs</h4>
-              </div>
-              <div class="timeline-body">
-                <!-- <p>
-                  Nous sommes devenus parents
-                </p> -->
+                <h4>Entrée du marié et sa mère</h4>
               </div>
               <div class="timeline-footer">
-                <p class="text-right">10h 45</p>
+                <p class="text-right">10h45</p>
               </div>
             </div>
           </li>
@@ -173,18 +151,10 @@
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>Entrée du Marié et sa Maman</h4>
-              </div>
-              <div class="timeline-body">
-                <!-- <p>
-                  Bénédiction de la team « Ekambi’S » devant Dieu et vous…
-                  « Etre proche de quelqu’un qui te rend heureuse c’est bien,
-                  mais être proche de quelqu’un qui ne peut pas être heureux
-                  sans toi…c’est mieux »
-                </p> -->
+                <h4>Entrée de la Mariée + Dame de compagnie et les 03 mages</h4>
               </div>
               <div class="timeline-footer">
-                <p class="text-right">10h 50</p>
+                <p class="text-right">10h55</p>
               </div>
             </div>
           </li>
@@ -195,42 +165,24 @@
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>Entrée de la mariée et son papa</h4>
-              </div>
-              <div class="timeline-body">
-                <!-- <p>
-                  Nous sommes devenus parents
-
-                  10h 55 : Entrée de la
-          mariée et son papa 11h 00 : Début de la cérémonie 12h 45 : Fin de la
-          cérémonie 13h 00 : Séance Photos et Apéritif Musical 14h 30 : Début du
-          Cocktail
-                </p> -->
+                <h4>Début de la cérémonie réligieuse</h4>
               </div>
               <div class="timeline-footer">
-                <p class="text-right">10h 55</p>
+                <p class="text-right">11h10</p>
               </div>
             </div>
           </li>
 
           <li class="timeline-inverted">
             <div class="timeline-badge">
-              <a><i class="fa fa-circle invert" id=""></i></a>
+              <a><i class="fa fa-circle invert"></i></a>
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>Début de la cérémonie</h4>
-              </div>
-              <div class="timeline-body">
-                <!-- <p>
-                  Bénédiction de la team « Ekambi’S » devant Dieu et vous…
-                  « Etre proche de quelqu’un qui te rend heureuse c’est bien,
-                  mais être proche de quelqu’un qui ne peut pas être heureux
-                  sans toi…c’est mieux »
-                </p> -->
+                <h4>Orientation des invités vers la séance photo</h4>
               </div>
               <div class="timeline-footer">
-                <p class="text-right">11h 00</p>
+                <p class="text-right">12h15 - 12h30</p>
               </div>
             </div>
           </li>
@@ -241,18 +193,10 @@
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>Fin de la cérémonie</h4>
-              </div>
-              <div class="timeline-body">
-                <!-- <p>
-                  Nous sommes devenus parents
-
-                  13h 00 : Séance Photos et Apéritif Musical 14h 30 : Début du
-          Cocktail
-                </p> -->
+                <h4>Séance Photos</h4>
               </div>
               <div class="timeline-footer">
-                <p class="text-right">12h 45</p>
+                <p class="text-right">12h30 - 13h30</p>
               </div>
             </div>
           </li>
@@ -263,18 +207,10 @@
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>Séance Photos et Apéritif Musical</h4>
-              </div>
-              <div class="timeline-body">
-                <!-- <p>
-                  Bénédiction de la team « Ekambi’S » devant Dieu et vous…
-                  « Etre proche de quelqu’un qui te rend heureuse c’est bien,
-                  mais être proche de quelqu’un qui ne peut pas être heureux
-                  sans toi…c’est mieux »
-                </p> -->
+                <h4>Apéro</h4>
               </div>
               <div class="timeline-footer">
-                <p class="text-right">13h 00</p>
+                <p class="text-right">13h30</p>
               </div>
             </div>
           </li>
@@ -285,18 +221,52 @@
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>Début du Cocktail</h4>
-              </div>
-              <div class="timeline-body">
-                <!-- <p>
-                  Bénédiction de la team « Ekambi’S » devant Dieu et vous…
-                  « Etre proche de quelqu’un qui te rend heureuse c’est bien,
-                  mais être proche de quelqu’un qui ne peut pas être heureux
-                  sans toi…c’est mieux »
-                </p> -->
+                <h4>Orientation des invités vers le coin buffet + Installation</h4>
               </div>
               <div class="timeline-footer">
-                <p class="text-right">14h 30</p>
+                <p class="text-right">14h30</p>
+              </div>
+            </div>
+          </li>
+
+          <li class="timeline-inverted">
+            <div class="timeline-badge">
+              <a><i class="fa fa-circle invert"></i></a>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4>Repas</h4>
+              </div>
+              <div class="timeline-footer">
+                <p class="text-right">14h50 - 17h30</p>
+              </div>
+            </div>
+          </li>
+
+          <li class="timeline">
+            <div class="timeline-badge">
+              <a><i class="fa fa-circle invert" id=""></i></a>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4>Coupure du Gâteau + Partage aux invités</h4>
+              </div>
+              <div class="timeline-footer">
+                <p class="text-right">17h45 - 18h30</p>
+              </div>
+            </div>
+          </li>
+
+          <li class="timeline-inverted">
+            <div class="timeline-badge">
+              <a><i class="fa fa-circle invert"></i></a>
+            </div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h4>Piste Libre</h4>
+              </div>
+              <div class="timeline-footer">
+                <p class="text-right">19h00</p>
               </div>
             </div>
           </li>
