added some icons

--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Meta Tags for Bootstrap 4 -->
     <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <!-- Bootstrap 4 CSS -->
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -109,7 +107,7 @@
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>Arrivée des invités</h4>
+                <h4><i class="fa fa-plane-arrival"></i> Arrivée des invités</h4>
               </div>
               <div class="timeline-footer">
                 <p class="text-right">10h00</p>
@@ -119,11 +117,11 @@
 
           <li class="timeline-inverted">
             <div class="timeline-badge">
-              <a><i class="fa fa-circle invert" id=""></i></a>
+              <a><i class="fa fa-circle invert"></i></a>
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>Entrée des Demoiselles et Garçons d’honneur + Installation</h4>
+                <h4><i class="fa fa-users"></i> Entrée des Demoiselles et Garçons d’honneur + Installation</h4>
               </div>
               <div class="timeline-footer">
                 <p class="text-right">10h30</p>
@@ -133,11 +131,11 @@
 
           <li>
             <div class="timeline-badge">
-              <a><i class="fa fa-circle" id=""></i></a>
+              <a><i class="fa fa-circle"></i></a>
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>Entrée du marié et sa mère</h4>
+                <h4><i class="fa fa-crown"></i> Entrée du marié et sa mère</h4>
               </div>
               <div class="timeline-footer">
                 <p class="text-right">10h45</p>
@@ -151,7 +149,7 @@
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>Entrée de la Mariée + Dame de compagnie et les 03 mages</h4>
+                <h4><i class="fa fa-chess-queen"></i> Entrée de la Mariée + Dame de compagnie et les 03 mages</h4>
               </div>
               <div class="timeline-footer">
                 <p class="text-right">10h55</p>
@@ -165,7 +163,7 @@
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>Début de la cérémonie réligieuse</h4>
+                <h4><i class="fa fa-church"></i> Début de la cérémonie réligieuse</h4>
               </div>
               <div class="timeline-footer">
                 <p class="text-right">11h10</p>
@@ -179,7 +177,7 @@
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>Orientation des invités vers la séance photo</h4>
+                <h4><i class="fa fa-person-booth"></i> Orientation des invités vers la séance photo</h4>
               </div>
               <div class="timeline-footer">
                 <p class="text-right">12h15 - 12h30</p>
@@ -193,7 +191,7 @@
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>Séance Photos</h4>
+                <h4><i class="fa fa-camera-retro"></i> Séance Photos</h4>
               </div>
               <div class="timeline-footer">
                 <p class="text-right">12h30 - 13h30</p>
@@ -207,7 +205,7 @@
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>Apéro</h4>
+                <h4><i class="fa fa-apple-alt"></i> Apéro</h4>
               </div>
               <div class="timeline-footer">
                 <p class="text-right">13h30</p>
@@ -221,7 +219,7 @@
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>Orientation des invités vers le coin buffet + Installation</h4>
+                <h4><i class="fa fa-map-signs"></i> Orientation des invités vers le coin buffet + Installation</h4>
               </div>
               <div class="timeline-footer">
                 <p class="text-right">14h30</p>
@@ -235,7 +233,7 @@
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>Repas</h4>
+                <h4><i class="fa fa-utensils"></i> Repas</h4>
               </div>
               <div class="timeline-footer">
                 <p class="text-right">14h50 - 17h30</p>
@@ -249,7 +247,7 @@
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>Coupure du Gâteau + Partage aux invités</h4>
+                <h4><i class="fa fa-birthday-cake"></i> Coupure du Gâteau + Partage aux invités</h4>
               </div>
               <div class="timeline-footer">
                 <p class="text-right">17h45 - 18h30</p>
@@ -263,7 +261,7 @@
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>Piste Libre</h4>
+                <h4><i class="fa fa-guitar"></i> Piste Libre</h4>
               </div>
               <div class="timeline-footer">
                 <p class="text-right">19h00</p>
@@ -306,7 +304,7 @@
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>La Rencontre</h4>
+                <h4><i class="fa fa-handshake"></i> La Rencontre</h4>
               </div>
               <div class="timeline-body">
                 <p>
@@ -321,15 +319,15 @@
 
           <li class="timeline-inverted">
             <div class="timeline-badge">
-              <a><i class="fa fa-circle invert" id=""></i></a>
+              <a><i class="fa fa-circle invert"></i></a>
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>Naissance De La Team Ekambi</h4>
+                <h4><i class="fa fa-ring"></i> Naissance De La Team Ekambi</h4>
               </div>
               <div class="timeline-body">
                 <p>
-                  Officialisation de la team « Ekambi’S »
+                  Officialisation de la team <span class="font-weight-bold">« Ekambi’S »</span>
                 </p>
               </div>
               <div class="timeline-footer">
@@ -344,7 +342,7 @@
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>Arrivée De Princesse Colleen</h4>
+                <h4><i class="fa fa-crown"></i> Arrivée De Princesse Colleen</h4>
               </div>
               <div class="timeline-body">
                 <p>
@@ -363,15 +361,11 @@
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>Benediction</h4>
+                <h4><i class="fa fa-praying-hands"></i> Benediction</h4>
               </div>
               <div class="timeline-body">
-                <p>
-                  Bénédiction de la team « Ekambi’S » devant Dieu et vous…
-                  « Etre proche de quelqu’un qui te rend heureuse c’est bien,
-                  mais être proche de quelqu’un qui ne peut pas être heureux
-                  sans toi…c’est mieux »
-                </p>
+                <p>Bénédiction de la team <span class="font-weight-bold">« Ekambi’S »</span> devant Dieu ET devant vous… <br />
+                  <span class="font-weight-bold">« Etre proche de quelqu’un qui te rend heureuse c’est bien, mais être proche de quelqu’un qui ne peut pas être heureux sans toi…c’est mieux »</span></p>
               </div>
               <div class="timeline-footer">
                 <p class="text-right">21 Décembre 2019</p>
@@ -379,49 +373,6 @@
             </div>
           </li>
 
-          <!-- <li>
-            <div class="timeline-badge">
-              <a><i class="fa fa-circle" id=""></i></a>
-            </div>
-            <div class="timeline-panel">
-              <div class="timeline-heading">
-                <h4>Timeline Event</h4>
-              </div>
-              <div class="timeline-body">
-                <p>
-                  Adfertur guttae sapientiae ducitur est Apollonius ut a a his
-                  domino Lycoridem in lucem. Theophile atque bona dei cenam
-                  veniebant est cum. Iusto opes mihi Tyrum in modo compungi
-                  mulierem ubi augue eiusdem ordo quos vero diam omni catervis
-                  famulorum. Bene dictis ut diem finito servis unde.
-                </p>
-              </div>
-              <div class="timeline-footer">
-                <p class="text-right">Mar-01-2014</p>
-              </div>
-            </div>
-          </li> -->
-
-          <!-- <li class="timeline-inverted">
-            <div class="timeline-badge">
-              <a><i class="fa fa-circle invert" id=""></i></a>
-            </div>
-            <div class="timeline-panel">
-              <div class="timeline-heading">
-                <h4>Timeline Event</h4>
-              </div>
-              <div class="timeline-body">
-                <p>
-                  Crede respiciens loco dedit beneficio ad suis alteri si puella
-                  eius in. Acceptis codicello lenonem in deinde plectrum anni
-                  ipsa quod eam est Apollonius.
-                </p>
-              </div>
-              <div class="timeline-footer primary">
-                <p class="text-right">Mar-02-2014</p>
-              </div>
-            </div>
-          </li> -->
           <li class="clearfix no-float"></li>
         </ul>
       </div>
