--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
       </div>
       <div id="marriage-message" class="paral message-tab text-center">
         <h1>Bienvenue dans notre monde!</h1>
+        <hr />
         <p class="lead">
           Nous avions souhaité pouvoir vous fournir quelques informations utiles
           afin de faciliter votre organisation pour participer au Tome 2 de
@@ -100,6 +101,7 @@
       </div>
       <div id="program" class="paral program-tab text-center">
         <h1>Programme</h1>
+        <hr />
         <ul class="timeline">
           <li>
             <div class="timeline-badge">
@@ -274,29 +276,26 @@
       </div>
       <div id="message" class="paral marriage-tab text-center">
         <h1>Mariage Samedi,</h1>
-        21 Décembre 2019 à 11h 00 Jardins les PALETUVIERS – MATANDA à Bonabéri
-        Chères invitées, chers invités, Nous souhaitons également attirer votre
-        attention sur l&#39;heure de début de la cérémonie. Nous voudrions
-        pouvoir débuter la cérémonie à 11h00 précises, afin d’éviter à certains
-        de nos chaleureux convives des bains de soleil interminables…A cet
-        effet, nous vous prions d&#39;arriver au plus tard à 10h15 afin que le
-        protocole d&#39;organisation puisse avoir suffisamment de temps pour
-        vous orienter et vous installer. Ceci permettra également de déployer
-        rapidement des solutions à d&#39;éventuels imprévus. La cérémonie se
-        déroulera en plein air, dans les jardins des PALETUVIERS –MATANDA à
-        l’entrée de Bonabéri. Vous conviendrez avec nous qu&#39;il serait
-        regrettable de débuter cette fête avec des vêtements trempés par de la
-        transpiration. Le succès de cet évènement commence par votre ponctualité
-        ! Pour ceux qui ont des enfants en bas âges, seuls les enfants âgés de 6
-        ans ou moins, pourront accompagner leurs parents. Il nous est difficile
-        de les compter parmi nous, compte tenu de l&#39;organisation mise en
-        place. Nous espérons que vous comprendrez et que vous respecterez cela.
-        Par la même occasion, veuillez préciser si votre enfant (06 ans au
-        moins) est allergique à l&#39;alcool :-)
+        <hr />
+        <p>Un 21 Décembre…2019 à 11h 00 aux Jardins les PALETUVIERS – MATANDA sis à Bonabéri.</p>
+        <p>Chers amis, nous souhaitons également attirer votre attention sur cet esprit de ponctualité qui devra nous animer tout au long de cette belle journée ensoleillée.</p>
+        <p>Nous voudrions pouvoir débuter la cérémonie à 11h10 précises, afin d’éviter à
+          certains de nos chaleureux convives des bains de soleil interminables…A cet effet,
+          nous vous prions d&#39;arriver au plus tard à 10h15 afin que le protocole d&#39;organisation
+          puisse avoir suffisamment de temps pour vous orienter et vous installer. Ceci
+          permettra également de déployer rapidement des solutions à d&#39;éventuels imprévus.</p>
+        <p>La cérémonie se déroulera en plein air, dans les jardins des <span class="font-weight-bold">PALETUVIERS
+          –MATANDA</span> à l’entrée de BONABERI. Vous conviendrez avec nous qu&#39;il serait
+          regrettable de débuter cette fête avec des vêtements trempés par de la transpiration,
+          le succès de cet évènement commencera par votre ponctualité.</p>
+        <p>Pour ceux ayant des enfants, nous ne pourrons malheureusement pas les admettre
+          tout au long de cette journée. Il nous est difficile de les compter parmi nous, compte
+          tenu de l&#39;organisation mise en place. Nous espérons que vous comprendrez et que
+          vous respecterez cela.</p>
       </div>
       <div id="histoire" class="paral histoire-tab text-center">
         <h1 style="font-family: cursive;">Notre Histoire</h1>
-
+        <hr />
         <ul class="timeline">
           <li>
             <div class="timeline-badge">
@@ -387,9 +386,8 @@
       </div>
       <div id="liste-de-cadeau" class="paral liste-cadeaux-tab text-center">
         <h1>Liste Cadeaux</h1>
-        Nous ne souhaitons pas publier de liste de cadeaux. <br />Une corbeille à
-        enveloppes sera mise à votre disposition lors de la réception.<br /> Merci
-        pour votre compréhension.
+        <hr />
+        <p>Nous n’avons pas de liste de cadeaux.</p>
       </div>
     </div>
     <footer class="wn-footer">
