added some signature

--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
         <p class="lead">
           Samedi, 21 Décembre 2019 à 11h 00
         </p>
-        <p class="lead">Jardins les PALETUVIERS – MATANDA à Bonabéri</p>
-        <p class="lead">MATANDA à Bonabéri</p>
+        <p class="lead">Jardins les PALETUVIERS - MATANDA à Bonabéri</p>
         <p class="lead">
           <i class="fa fa-female"></i> <i class="fa fa-male"></i> Code : Décontractée/Rustique &amp; Chic
         </p>
@@ -96,7 +95,7 @@
           lendemain, ce serait super que ce soit uniquement dû à
           l&#39;expression de votre joie débordante tout au long de cette belle
           journée. Nous frémissons de joie à l&#39;idée de vous compter parmi
-          nous! The Ekambi’s
+          nous! <br /> <i class="fa fa-signature"></i> The Ekambi’s
         </p>
       </div>
       <div id="program" class="paral program-tab text-center">
