--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           Julie<i class="fa fa-heart"></i>Sammy
         </h1>
         <p class="lead">
-          Samedi, 21 Décembre 2019 à 11h 00
+          Samedi, 21 Décembre 2019 à 11h10
         </p>
         <p class="lead">Jardins les PALETUVIERS - MATANDA à Bonabéri</p>
         <p class="lead">
@@ -160,7 +160,7 @@
 
           <li>
             <div class="timeline-badge">
-              <a><i class="fa fa-circle" id=""></i></a>
+              <a><i class="fa fa-circle"></i></a>
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
@@ -188,7 +188,7 @@
 
           <li>
             <div class="timeline-badge">
-              <a><i class="fa fa-circle" id=""></i></a>
+              <a><i class="fa fa-circle"></i></a>
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
@@ -274,9 +274,9 @@
         </ul>
       </div>
       <div id="message" class="paral marriage-tab text-center">
-        <h1>Mariage Samedi,</h1>
+        <h1>Notre Marriage</h1>
         <hr />
-        <p>Un 21 Décembre…2019 à 11h 00 aux Jardins les PALETUVIERS – MATANDA sis à Bonabéri.</p>
+        <p>Un 21 Décembre…2019 à 11h10 aux Jardins les PALETUVIERS – MATANDA sis à Bonabéri.</p>
         <p>Chers amis, nous souhaitons également attirer votre attention sur cet esprit de ponctualité qui devra nous animer tout au long de cette belle journée ensoleillée.</p>
         <p>Nous voudrions pouvoir débuter la cérémonie à 11h10 précises, afin d’éviter à
           certains de nos chaleureux convives des bains de soleil interminables…A cet effet,
