fixed more minors than seniors lol

--- a/index.html
+++ b/index.html
@@ -276,6 +276,7 @@
       <div id="message" class="paral marriage-tab text-center">
         <h1>Notre Marriage</h1>
         <hr />
+        <p><span class="font-weight-bold">« Etre proche de quelqu’un qui te rend heureuse c’est bien, mais être proche de quelqu’un qui ne peut pas être heureux sans toi…c’est mieux »</span></p>
         <p>Un 21 Décembre…2019 à 11h10 aux Jardins les PALETUVIERS – MATANDA sis à Bonabéri.</p>
         <p>Chers amis, nous souhaitons également attirer votre attention sur cet esprit de ponctualité qui devra nous animer tout au long de cette belle journée ensoleillée.</p>
         <p>Nous voudrions pouvoir débuter la cérémonie à 11h10 précises, afin d’éviter à
@@ -363,7 +364,7 @@
               </div>
               <div class="timeline-body">
                 <p>Bénédiction de la team <span class="font-weight-bold">« Ekambi’S »</span> devant Dieu ET devant vous… <br />
-                  <span class="font-weight-bold">« Etre proche de quelqu’un qui te rend heureuse c’est bien, mais être proche de quelqu’un qui ne peut pas être heureux sans toi…c’est mieux »</span></p>
+                  </p>
               </div>
               <div class="timeline-footer">
                 <p class="text-right">21 Décembre 2019</p>
