added something more

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
         <p><span class="font-weight-bold">« Etre proche de quelqu’un qui te rend heureuse c’est bien, mais être proche de quelqu’un qui ne peut pas être heureux sans toi…c’est mieux »</span></p>
         <p>Un 21 Décembre…2019 à 10h30 aux Jardins les PALETUVIERS – MATANDA sis à Bonabéri.</p>
         <p>Chers amis, nous souhaitons également attirer votre attention sur cet esprit de ponctualité qui devra nous animer tout au long de cette belle journée ensoleillée.</p>
-        <p>Nous voudrions pouvoir débuter la cérémonie à 11h10 précises, afin d’éviter à
+        <p>Nous voudrions pouvoir débuter la cérémonie à 11h00 précises, afin d’éviter à
           certains de nos chaleureux convives des bains de soleil interminables…A cet effet,
           nous vous prions d&#39;arriver au plus tard à 10h15 afin que le protocole d&#39;organisation
           puisse avoir suffisamment de temps pour vous orienter et vous installer. Ceci
@@ -322,7 +322,7 @@
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4><i class="fa fa-ring"></i> Naissance De La Team Ekambi</h4>
+                <h4><i class="fa fa-ring"></i> Mariage Civil</h4>
               </div>
               <div class="timeline-body">
                 <p>
