changed dress code

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </p>
         <p class="lead">Jardins les PALETUVIERS - MATANDA à Bonabéri</p>
         <p class="lead">
-          <i class="fa fa-female"></i> <i class="fa fa-male"></i> Code : Décontractée/Rustique &amp; Chic
+          <i class="fa fa-female"></i> <i class="fa fa-male"></i> Code : Rustique Chic
         </p>
       </div>
       <div id="marriage-message" class="paral message-tab text-center">
