--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <ul class="navbar-nav mx-auto">
           <li class="nav-item active text-center" >
             <a class="nav-link" href="#acceuil" style="color: black;"
-              >Acceuil <span class="sr-only">(current)</span></a
+              >Accueil <span class="sr-only">(current)</span></a
             >
           </li>
           <li class="nav-item text-center">
